[package]
name = "sphinx-auther"
version = "0.1.11"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "secp256k1 signature-based authentication for sphinx chat"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[dependencies]
secp256k1 = { version = "0.24.0", features = ["std", "rand-std", "lowmemory", "bitcoin_hashes"] }
anyhow = "1"
log = "0.4"
base64 = "0.13.0" 
hex = "0.4.3"

[features]
default = [ "no-std", "secp-recovery", "secp-lowmemory" ]
no-std = ["secp256k1/alloc"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]
rand = ["secp256k1/rand-std"]