[package]
name = "sphinx-auther"
version = "0.1.12"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "secp256k1 signature-based authentication for sphinx chat"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[features]
default = [ "std"]
std = ["secp256k1/std", "hex/std", "anyhow/std", "base64/std"]

[dependencies]
secp256k1 = { version = "0.24.0", default-features = false, features = ["lowmemory", "recovery", "bitcoin_hashes"] }
anyhow = { version = "1", default-features = false }
log = "0.4"
base64 = { version = "0.13.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
