[package]
name = "sphinx-crypter"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "end-to-end ECDH crypto"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[lib]
doctest = false

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless"] }
rand = "0.8.5"
secp256k1 = { version = "0.24.0", features = ["std", "rand-std", "lowmemory"] }

