[package]
name = "sphinx-derive"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "Sphinx key derivation utils"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[lib]
doctest = false

[dependencies]
bitcoin = "0.30.2"
bip39 = { version = "1.0.1", default-features = false }
anyhow = { version = "1", default-features = false }

