[package]
name = "sphinx-deriver"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "deriving keys"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[dependencies]
lightning-signer-core = { package = "lightning-signer-core", git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", default-features = false, features = ["std", "secp-lowmemory"] }
bip39 = "1.0.1"
anyhow = "1"