[package]
name = "sphinx-glyph"
version = "0.1.2"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "Sphinx lightning hardware signer"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[features]
default = ["std"]
std = ["rmp-serde", "anyhow/std", "hex/std", "serde_json/std", "sphinx-auther/std"]
# FIXME remove rmp-serde from no-std
no-std = ["rmp-serde", "serde_json/alloc"]

[dependencies]
sphinx-auther = { path = "../auther", version = "0.1.12", default-features = false }
anyhow = { version = "1", default-features = false }
hex = { version = "0.4.3", default-features = false }
rmp-serde = { version = "1.1.0", optional = true }
serde = { version = "1.0.168", default-features = false, features = ["derive"] }
# serde_json requires either std or alloc enabled
serde_json = { version = "1.0", default-features = false }
# serde_bolt = { version = "0.2", default-features = false }
