[package]
name = "lss-connector"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "LSS connector utils"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[lib]
doctest = false

[features]
default = ["broker", "std"]
std = ["vls-protocol-signer/std", "anyhow/std", "secp256k1/rand-std", "secp256k1/std", "sphinx-glyph/std"]
no-std = ["vls-protocol-signer/no-std", "sphinx-glyph/no-std"]
broker = ["lightning-storage-server", "vls-frontend", "tokio"]
no-native = []

[dependencies]
sphinx-glyph = { path = '../glyph', default-features = false }
rmp-utils = { version = "0.1.0", path = "../rmp-utils" }
log = "0.4"
anyhow = { version = "1", default-features = false }
secp256k1 = { version = "0.24.0", default-features = false, features = ["bitcoin_hashes"] }
# broker libs
# vls
lightning-storage-server = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "186e4b93161134fbdd7ec7fbd034a754e380ffa5", optional = true }
vls-frontend = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "186e4b93161134fbdd7ec7fbd034a754e380ffa5", optional = true }
vls-protocol-signer = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "186e4b93161134fbdd7ec7fbd034a754e380ffa5", default-features = false, features = ["secp-lowmemory"] }
# local
# lightning-storage-server = { path = "../../vls/lightning-storage-server", optional = true }
# vls-frontend = { path = "../../vls/vls-frontend", optional = true }
# vls-protocol-signer = { path = "../../vls/vls-protocol-signer", default-features = false, features = ["secp-lowmemory"] }
# multi
# lightning-storage-server = { git = "https://gitlab.com/irriden/validating-lightning-signer.git", rev = "ce04684b312c95fa7a62329ff198092a50e9a088", optional = true }
# vls-frontend = { git = "https://gitlab.com/irriden/validating-lightning-signer.git", rev = "ce04684b312c95fa7a62329ff198092a50e9a088", optional = true }
# vls-protocol-signer = { git = "https://gitlab.com/irriden/validating-lightning-signer.git", rev = "ce04684b312c95fa7a62329ff198092a50e9a088", default-features = false, features = ["secp-lowmemory"] }

tokio = { version = "1.27", features = ["macros", "rt-multi-thread"], optional = true }

[[bin]]
name = "playground"
path = "src/playground.rs"
