[package]
name = "rmp-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", default-features = false }
rmp = { version = "0.8.11", default-features = false }

[dev-dependencies]
rmp-serde = "1.1.1"
