[package]
name = "sphinx-signer"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"
description = "Sphinx lightning hardware signer"
repository = "https://github.com/stakwork/sphinx-rs"
license = "MIT"

[lib]
doctest = false

[features]
default = ["fspersist", "persist", "std"]
fspersist = ["fsdb"]
persist = ["vls-persist"]
std = ["vls-persist/std", "vls-protocol-signer/std", "vls-protocol/std", "lss-connector/std", "rand/std", "anyhow/std", "sphinx-glyph/std", "hex/std"]
broker-test = ["lss-connector/broker"]
no-std = ["vls-protocol-signer/no-std", "vls-persist/no-std", "lss-connector/no-std", "sphinx-glyph/no-std"]
no-native = ["lss-connector/no-native"]
lowmemory = []

[dependencies]
sphinx-glyph = { path = '../glyph', default-features = false }
lss-connector = { path = "../lss-connector", default-features = false }
log = "0.4"
bip39 = { version = "1.0.1", default-features = false }
rand = { version = "0.8", default-features = false }
serde = { version = "1.0.168", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false }
anyhow = { version = "1", default-features = false }
fsdb = { git = "https://github.com/Evanfeenstra/fsdb.git", rev = "7d0db454133bf37b16d9cf5500111491e67c81e5", optional = true }
# fsdb = { path = "../../fsdb", optional = true }
thiserror = "1.0.44"
# vls
vls-protocol-signer = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "300495658a1903a45a081771fdf2fe6883b057a7", default-features = false, features = ["secp-lowmemory", "tracker_size_workaround"] }
vls-protocol = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "300495658a1903a45a081771fdf2fe6883b057a7", default-features = false }
vls-persist = { git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git", rev = "300495658a1903a45a081771fdf2fe6883b057a7", default-features = false, features = ["kvv"], optional = true }
# local
# vls-protocol-signer = { path = "../../vls/vls-protocol-signer", default-features = false, features = ["secp-lowmemory", "tracker_size_workaround"] }
# vls-protocol = { path = "../../vls/vls-protocol", default-features = false }
# vls-persist = { path = "../../vls/vls-persist", default-features = false, features = ["kvv"], optional = true }

[dev-dependencies]
simple_logger = "4.2.0"
bech32 = "0.9.1"
