[package]
name = "sphinx-ffi"
version = "0.1.3"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[lib]
name = "sphinxrs"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["uniffi"]
wasm = []

[dependencies]
sphinx-crypter = { path = "../crypter" }
sphinx-signer = { path = "../signer", default-features = false, features = ["no-std","persist"] }
sphinx-glyph = { path = "../glyph", default-features = false, features = ["no-std"] }
uniffi = { version = "0.24.1", optional = true }
hex = { version = "0.4.3", default-features = false }
thiserror = "1.0.31"

[build-dependencies]
uniffi = { version = "0.24.1", optional = true, features = ["build"] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
debug = true # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.

# [[bin]]
# name = "uniffi-bindgen"
# path = "uniffi-bindgen.rs"

[patch.crates-io]
serde_bolt = { path = "../../../evanf/serde-bolt" }