[package]
name = "sphinx-ffi"
version = "0.1.3"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[lib]
name = "sphinxrs"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["ffi", "std"]
ffi = ["uniffi"]
std = ["sphinx-signer/std", "sphinx-glyph/std"]
no-std = ["sphinx-signer/no-std", "sphinx-glyph/no-std"]
wasm = []

[patch.crates-io]
lightning = { git = "https://github.com/Evanfeenstra/rust-lightning", rev = "3f562dd5c6feb8413cf9a1ac02caef2b8ef59a84" }

[dependencies]
sphinx-crypter = { path = "../crypter" }
sphinx-signer = { path = "../signer", default-features = false, features = [
    "persist",
    "no-native",
] }
sphinx-glyph = { path = "../glyph", default-features = false }
sphinx = { git = "https://github.com/stakwork/sphinx", rev = "8986904a51c4add8a3a43b7dcbe5c32772f722e0", features = [
    "msg",
    "bindings",
] }
# sphinx = { path = "../../sphinx/sphinx" }
uniffi = { version = "0.24.1", optional = true }
hex = { version = "0.4.3", default-features = false }
thiserror = "1.0.31"
rmp-utils = { version = "0.1.0", path = "../rmp-utils" }

[build-dependencies]
uniffi = { version = "0.24.1", optional = true, features = ["build"] }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
debug = true      # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
