[package]
name = "sphinx-ffi"
version = "0.1.3"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
edition = "2018"

[lib]
name = "sphinxrs"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["uniffi"]
wasm = []

[dependencies]
sphinx-crypter = { path = "../crypter" }
sphinx-derive = { path = "../derive" }
sphinx-glyph = { path = "../glyph", default-features = false, features = ["std"] }
sphinx = { git = "https://github.com/stakwork/sphinx", rev = "b764cdfd660ee09feee370281b688a57c7ad4bab", features = [
    "msg",
    "bindings",
    "macaroon",
] }
# sphinx = { path = "../../sphinx/sphinx" }
uniffi = { version = "0.24.1", optional = true }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
time = "0.3.37"

[build-dependencies]
uniffi = { version = "0.24.1", optional = true, features = ["build"] }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
debug = true      # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

