[package]
name = "sphinx-frost-musig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
schnorr_fun = {path = "../secp256kfun/schnorr_fun"}
secp256kfun = {path = "../secp256kfun/secp256kfun"}
sha2 = "0.10.6"
