[package]
name = "sphinx-wasm"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
description = "wasm sphinx"
license = "MIT/Apache-2.0"
repository = "https://github.com/stakwork/sphinx-rs"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
crypter-ffi = { path = "../sphinx-ffi", default-features = false, features = ["wasm"] }
getrandom = { version = "0.2.7", features = ["js"] }

[profile.release]
lto = true