[package]
name = "sphinx-wasm"
version = "0.1.0"
authors = ["Evan Feenstra <evanfeenstra@gmail.com>"]
description = "wasm sphinx"
license = "MIT/Apache-2.0"
repository = "https://github.com/stakwork/sphinx-rs"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
control = []

[dependencies]
wasm-bindgen = "0.2"
sphinx-ffi = { path = "../sphinx-ffi", default-features = false, features = ["no-std","wasm"] }
getrandom = { version = "0.2.7", features = ["js"] }
secp256k1 = { version = "0.24.0", default-features = false }

[profile.release]
lto = true