[package]
name = "vls-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
sphinx-signer = { path = "../signer" }
hex = "0.4.3"
rmp-serde = "1.1.0"
thiserror = "1.0.31"
log = "0.4"
rumqttc = "0.12.0"
dotenv = "0.15.0"
fern = "0.6" 
chrono = "0.4"
fsdb = { version = "0.1.11" }
anyhow = "1"
rand = "0.8.5"