[package]
name = "vls-mqtt"
version = "0.1.0"
edition = "2021"
default-run = "vls-mqtt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
sphinx-signer = { path = "../signer" }
lss-connector = { path = "../lss-connector" }
hex = "0.4.3"
rmp-serde = "1.1.0"
thiserror = "1.0.31"
log = "0.4"
rumqttc = { version = "0.21.0", features = ["url"] }
dotenv = "0.15.0"
fern = "0.6" 
chrono = "0.4"
fsdb = { git = "https://github.com/Evanfeenstra/fsdb.git", rev = "7d0db454133bf37b16d9cf5500111491e67c81e5" }
# fsdb = { path = "../../fsdb" }
anyhow = "1"
rand = "0.8.5"

[[bin]]
name = "multi"
path = "src/multi.rs"
